# ADAS

./: CMakeLists.txt  README.md  atk_rockx_face_recognition.cpp  face_database.cpp  import_face_library.cpp  nap_test.cpp  postprocess.cc
face_smoking_phone_sleep/: atk_rockx_face_recognition.cpp  face_database.cpp  import_face_library.cpp  nap_test.cpp  postprocess.cc
face_smoking_phone_sleep/include/: atk_rockx_face_recognition.h  face_database.h
include/: atk_rockx_face_recognition.h  face_database.h  import_face_library.h  nap_test.h  postprocess.h
model/: pfpld.pre.rknn
model_trans/: onnx_convert.py  pre_compile.py
model_trans/model_data/mobilefacenet/: dataset.txt  mobilefacenet.rknn
model_trans/model_data/ultralytics_yolov5/yolov5s_v4.0/: dataset.txt
qt/: face_database.h  face_register.qml  facedetection.pro  facedetection_qml.qrc  facerecognitioncamerathread.cpp  facerecognitioncamerathread.h  facerecognitioncapturethread.h  facerecognitionitem.cpp  facerecognitionitem.h  faceregistercamerathread.cpp  faceregistercamerathread.h  faceregistercapturethread.h  faceregisteritem.cpp  faceregisteritem.h  fatigue_test.qml  main.cpp  main.qml
